[metadata]
name = py_hamt_sharding
author = kralverde
description = Python implementation of hamt-sharding.
long_description = file: README.rst
long_description_content_type = text/x-rst
url = https://github.com/kralverde/py-hamt-sharding/
project_urls =
    Bug Tracker = https://github.com/kralverde/py-hamt-sharding/issues
# see https://pypi.org/classifiers/
classifiers =
    Development Status :: 3 - Alpha
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.7
    Operating System :: OS Independent
    Natural Language :: English
    Typing :: Typed

[options]
packages = find:
python_requires = >=3.7
